--- a/overlay/frameworks/base/core/res/res/values/colors_device_defaults.xml
+++ b/overlay/frameworks/base/core/res/res/values/colors_device_defaults.xml
@@ -17,18 +17,21 @@
 */
 -->
 <resources>
-    <color name="background_device_default_light">#ffffffff</color>
-    <color name="background_floating_device_default_dark">#ff3c4043</color>
-    <color name="error_color_device_default_dark">#fff28b82</color>
-    <color name="error_color_device_default_light">#ffd93025</color>
-    <color name="primary_dark_device_default_dark">#ff242424</color>
-    <color name="primary_dark_device_default_settings">#ff000000</color>
-    <color name="primary_dark_device_default_settings_light">#ffffffff</color>
-    <color name="primary_device_default_dark">#ff2d2d2d</color>
-    <color name="primary_device_default_settings">#ff2d2d2d</color>
-    <color name="primary_device_default_settings_light">#ffffffff</color>
-    <color name="quaternary_device_default_settings">#ff9e9e9e</color>
-    <color name="secondary_device_default_settings">#ff3a3a3a</color>
-    <color name="system_error">#ffea4335</color>
-    <color name="tertiary_device_default_settings">#ff616161</color>
+    <color name="accent_device_default_dark">#8ab4f8</color>
+    <color name="accent_device_default_light">#1a73e8</color>
+    <color name="background_device_default_light">#ffffff</color>
+    <color name="background_floating_device_default_dark">#3c4043</color>
+    <color name="config_progress_background_tint">@color/background_device_default_dark</color>
+    <color name="error_color_device_default_dark">#f28b82</color>
+    <color name="error_color_device_default_light">#d93025</color>
+    <color name="primary_dark_device_default_dark">#242424</color>
+    <color name="primary_dark_device_default_settings">#000</color>
+    <color name="primary_dark_device_default_settings_light">#ffffff</color>
+    <color name="primary_device_default_dark">#2d2d2d</color>
+    <color name="primary_device_default_settings">#2d2d2d</color>
+    <color name="primary_device_default_settings_light">#ffffff</color>
+    <color name="quaternary_device_default_settings">#9e9e9e</color>
+    <color name="secondary_device_default_settings">#3a3a3a</color>
+    <color name="system_error">#ea4335</color>
+    <color name="tertiary_device_default_settings">#616161</color>
 </resources>
